This is V2.2.1 (February  8 2001). New features include:
- Memory allocation bug for large images on Alphas while
  preparing the background-map fixed.
- CLEANing bug with hollow objects on weighted images
  fixed.

/*- Previous notes for V2.2.0 (February  4 2001) */
- MAP_RMS weight-map bug fixed.
- Huge MAP_WEIGHT calibration bugs fixed.

PWD: 20 March 2000. Peter Draper. Added RAD_THRESH and RAD_TYPE 
     parameters for determining average radii of objects above
     a range of different intensities.

/*- Previous notes for V2.1.6 (February 11 2000) */

- crowding-flag bug introduced in V2.1.5 fixed.

/*- Previous notes for V2.1.5 (February 8 2000) */
- Small inaccuracy in crowding-flag positioning fixed.
- Fixed division by zero in local background in MASK_TYPE
  CORRECT mode.
- Risk of segmentation fault with huge weight maps fixed.

/*- Previous notes for V2.1.4 (November 13 1999) */
- Quote (') symbol now properly handled in FITS headers.
- Removed display of debug information inadvertently left
  in the previous release.

/*- Previous notes for V2.1.3 (September 14 1999) */
- Bug in ASSOC on Linux systems fixed.
- Background bug in WEIGHT_TYPE NONE,MAP_WEIGHT mode fixed.
- THRESH_TYPE ABSOLUTE now works on weighted images.

/*- Previous notes for V2.1.0 (May 24 1999) */
- Better formatting of output flags.
- New display.
- Total robust handling of weight-maps during background-
  determination.
- (tiny) differences between single and double-image results
  suppressed.
- New (experimental) _PROFILE photometric parameters.
- New WEIGHT_GAIN parameter (see doc).

/*- Previous notes for V2.0.22 (April 9 1999) */
- Many memory leaks fixed.
- CLEANing bug with very faint sources fixed.
- BACKGROUND_RMS check-images are now operational in
  single-image mode.
- Documentation improved.

/*- Previous notes for V2.0.21 (March 2 1999) */
This is V2.0.21 (March 2 1999). New features include:
- BACK_VALUE bug fixed.
- XPEAK and YPEAK offset bugs fixed.
